# ulneron

./: .pre-commit-config.yaml  Cargo.toml
docs/: concept.md  functional-0.1.md
src/: lib.rs  main.rs
src/client/: mod.rs  plugin.rs  setup.rs
src/client/components/: mod.rs  player.rs
src/client/controller/: mod.rs  plugin.rs  setup.rs
src/client/game/: mod.rs  plugin.rs
src/client/graphics/: mod.rs  plugin.rs  setup.rs
src/client/lobby/: mod.rs  plugin.rs
src/client/networking/: message.rs  mod.rs  plugin.rs
src/client/resources/: entities_ids.rs  input_state.rs  local_player.rs  mod.rs  player_entities.rs  player_ids.rs  tick_buffer.rs
src/client/systems/: downstream_reader.rs  mod.rs  movement.rs  movement_controller.rs  movement_input.rs  movement_sync.rs  movement_view.rs  spawn.rs  upstream_writer.rs
src/client/ui/: mod.rs  plugin.rs  setup.rs
src/client_endpoint/: mod.rs  plugin.rs
src/client_endpoint/systems/: event_receiver.rs  event_sender.rs
src/events/: cleanup.rs  mod.rs  plugin.rs
src/events/downstream/: downstream_event.rs  mod.rs  movement_event.rs  spawn_event.rs
src/events/upstream/: input_event.rs  join_event.rs  mod.rs  upstream_event.rs
src/game/: mod.rs  plugin.rs  setup.rs
src/game/systems/: movement.rs
src/graphics/: mod.rs  plugin.rs  setup.rs
src/graphics/resources/: mod.rs
src/graphics/systems/: camera.rs  mod.rs  movement.rs  spawn.rs  tick_delta.rs
src/networking/client/: mod.rs  (+1 more)
src/protocol/: mod.rs  plugin.rs
src/server/: mod.rs  plugin.rs  setup.rs
src/server_endpoint/: mod.rs  plugin.rs
(+191 files in other folders)
