[package]
name = "ulneron"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bincode = "1.3.3"
kiddo = "0.2.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
